<resources>
    <string name="app_name">Hodop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_maps">Map</string>
    <string name="traffic_update_app">Traffic Update App</string>
    <string name="take_a_peep">Take a Peep</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_phone_no">Not a valid phone number</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_up">Sign in</string>
    <string name="with_the_speed_of_light_text">with the speed of light</string>
    <string name="begin_journey">Begin Journey!</string>
    <string name="phone_number">... phone number</string>
    <string name="traffic_updates">Traffic Updates</string>
    <string name="traffic_update_dummy_text">From Jakende to Ojuelegba is experiencing heavy traffic at the moment</string>
    <string name="login_text">Login</string>
    <string name="forgot_password_text">Forgot password?</string>
    <string name="new_user_text">New user?</string>
    <string name="sign_up">Sign up</string>
    <string name="log">LOGIN</string>
    <string name="map_api">AIzaSyDvnBRbwumbvqeYRVsQmg7r7SqvM1CXQGU</string>
    <string name="title_activity_request_consent">RequestConsentActivity</string>
    <string name="accept_hodop_rule">You are about to join Hodop traffic community</string>
    <string name="agree_traffic_rule_text">I agree to follow the rules guiding posting of traffic update on Hodop</string>
    <string name="tc_text">I agree to all Hodop terms and conditions</string>

</resources>
