<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_70sdp"
            android:layout_height="@dimen/_40sdp"
            android:id="@+id/app_logo_img"
            android:src="@drawable/ic_group_logo2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_below="@id/app_logo_img"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/login_text"
                android:textColor="@color/white"
                android:textSize="@dimen/_25ssp"
                android:textStyle="bold" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/with_the_speed_of_light_text"
                android:textColor="@color/blue"
                android:textSize="@dimen/_13ssp" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_35sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edit_text_rect_bg_dark_blue"
                android:textSize="@dimen/_13ssp"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:drawablePadding="@dimen/_15sdp"
                android:drawableStart="@drawable/ic_email"
                android:textColor="@color/blue"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:textColorHint="@color/blue"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/login_edit_text_rect_bg_dark_blue"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:textColorHint="@color/blue"
                android:textColor="@color/blue"
                android:layout_width="match_parent"
                android:textSize="@dimen/_13ssp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:drawablePadding="@dimen/_15sdp"
                android:drawableStart="@drawable/ic_lock_open"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

            <RelativeLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_35sdp"
                android:textColor="@color/white"
                android:padding="@dimen/_10sdp"
                android:elevation="@dimen/_2sdp"
                android:background="@drawable/round_edge_white_button"
                android:layout_marginBottom="@dimen/_10sdp"
                android:enabled="false"
                tools:targetApi="lollipop" >
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text"
                    android:id="@+id/sign_in_button_text"
                    android:layout_centerInParent="true"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    />
                <ProgressBar
                    android:id="@+id/loading_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"
                    android:indeterminateTintMode="src_atop"
                    android:indeterminateTint="@color/colorPrimaryDark"
                    android:visibility="gone"
                    />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_text"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12ssp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user_text"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:id="@+id/new_user_button"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    </ScrollView>
</layout>