<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:background="@color/grey"
    android:paddingStart="@dimen/_20sdp"
    android:paddingEnd="@dimen/_20sdp"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_40sdp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:id="@+id/app_logo_img"
        android:src="@drawable/ic_group_logo1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_logo_img"
        android:layout_gravity="bottom"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/begin_journey"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_25ssp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/with_the_speed_of_light_text"
            android:textColor="@color/grey_600"
            android:textSize="@dimen/_13ssp" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_username"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_1sdp"
            android:background="@drawable/sign_up_edit_text_rect_bg_white"
            android:textSize="@dimen/_13ssp"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:drawableStart="@drawable/ic_user"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/grey_600"
            android:hint="Tell us about yourself"
            android:inputType="textAutoComplete"
            android:selectAllOnFocus="true"
            tools:targetApi="lollipop" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_phone"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_1sdp"
            android:background="@drawable/sign_up_edit_text_rect_bg_white"
            android:textSize="@dimen/_13ssp"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:drawableStart="@drawable/ic_phone_dark"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/grey_600"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:selectAllOnFocus="true"
            tools:targetApi="lollipop" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_1sdp"
            android:background="@drawable/sign_up_edit_text_rect_bg_white"
            android:textSize="@dimen/_13ssp"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/grey_600"
            android:drawableStart="@drawable/ic_dark_email"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            tools:targetApi="lollipop" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_password"
            android:layout_marginTop="@dimen/_10sdp"
            android:elevation="@dimen/_1sdp"
            android:background="@drawable/sign_up_edit_text_rect_bg_white"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/grey_600"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:drawableStart="@drawable/lock_open"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            tools:targetApi="lollipop" />

        <RelativeLayout
            android:id="@+id/signup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_35sdp"
            android:textColor="@color/white"
            android:padding="@dimen/_10sdp"
            android:elevation="@dimen/_2sdp"
            android:background="@drawable/round_edge_blue_button"
            android:layout_marginBottom="@dimen/_25sdp"
            android:enabled="false"
            tools:targetApi="lollipop" >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SIGN UP"
                android:id="@+id/sign_up_button_text"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                />
            <ProgressBar
                android:id="@+id/loading_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerInParent="true"
                android:visibility="gone"
                />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_7sdp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign up using "
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Facebook"
                android:id="@+id/facebook_sign_up_button"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Have an account?  "
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Log in"
                android:id="@+id/existing_user_button"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
    </ScrollView>